--- a/index.html
+++ b/index.html
@@ -73,14 +73,15 @@
                   <h3 class="input__title">IMC para Adulto</h3>
                   
                   <div class="input__box">
-                    <input class="input__imc" type="number" name="" id="weight"  required/>
+                    <input class="input__imc" type="text" name="" id="weight"  required/>
                     <label for="" class="input__label">Peso(KG)</label>
                   </div>
 
                   <div class="input__box">
-                    <input class="input__imc" type="number" name="" id="height" required />
+                    <input class="input__imc" type="text" name="" id="height" required />
                     <label for="" class="input__label">Altura (m)</label>
                   </div>
+
                 </div>
 
               </div>
